# django-model-values

./: .gitignore  .hgignore  .hgtags  .travis.yml  404.html  CHANGELOG.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  index.html  mkdocs.yml  model_values.py  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini  zensical.toml
.github/workflows/: build.yml  release.yml
docs/: Makefile  conf.py  example.md  example.rst  index.md  index.rst  manager.rst  queryset.rst  reference.md  reference.rst  requirements.in  requirements.txt
example/: index.html
model_values/: __init__.py
reference/: index.html
search/: search_index.json
tests/: conftest.py  models.py  test_all.py
