[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-model-values"
dynamic = ["version"]
description = "Taking the O out of ORM."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [{name = "Aric Coady", email = "aric.coady@gmail.com"}]
keywords = ["values_list", "pandas", "column-oriented", "data", "mapper", "pattern", "orm"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["django>=4.2"]

[project.urls]
Homepage = "https://github.com/coady/django-model-values"
Documentation = "https://coady.github.io/django-model-values"
Changelog = "https://github.com/coady/django-model-values/blob/main/CHANGELOG.md"
Issues = "https://github.com/coady/django-model-values/issues"

[tool.setuptools]
packages = ["model_values"]

[tool.setuptools.dynamic]
version = {attr = "model_values.__version__"}

[tool.setuptools.package-data]
model_values = ["py.typed"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
preview = true
quote-style = "preserve"

[[tool.mypy.overrides]]
module = ["django.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["model_values"]
branch = true
