[project]
name = "django-model-values"
version = "1.7"
description = "Taking the O out of ORM."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "Aric Coady", email = "aric.coady@gmail.com"}]
keywords = ["values_list", "dataframe", "column-oriented", "data-mapper", "orm"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Framework :: Django :: 5",
    "Framework :: Django :: 6",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["django>=5.2"]

[project.urls]
Homepage = "https://github.com/coady/django-model-values"
Documentation = "https://coady.github.io/django-model-values"
Changelog = "https://github.com/coady/django-model-values/blob/main/CHANGELOG.md"
Issues = "https://github.com/coady/django-model-values/issues"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ty.rules]
# unused-ignore-comment = "error"
invalid-argument-type = "ignore"
invalid-method-override = "ignore"
possibly-missing-attribute = "ignore"
unresolved-import = "ignore"

[tool.coverage.run]
source = ["model_values"]
branch = true

[dependency-groups]
dev = ["pytest-cov", "pytest-django"]
docs = ["mkdocstrings[python]", "mkdocs-material"]
