[metadata]
name = django-model-values
version = attr: model_values.__version__
author = Aric Coady
author_email = aric.coady@gmail.com
description = Taking the O out of ORM.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coady/django-model-values
license = Apache Software License
keywords = values_list, pandas, column-oriented, data, mapper, pattern, orm
project_urls =
    Documentation = https://coady.github.io/django-model-values
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database :: Database Engines/Servers
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
zip_safe = False
packages = model_values
install_requires = django>=2.2
python_requires = >=3.7

[options.package_data]
model_values = py.typed

[flake8]
max-line-length = 110
exclude = .venv

[coverage:run]
source = model_values
branch = True

[mypy]

[mypy-django.*]
ignore_missing_imports = True
